--- a/ch5/src/main/res/values/colors.xml
+++ b/ch5/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="text_color">#00FF00</color>
+    <color name="text_bg_color">#FF0000</color>
 </resources>
