--- a/ch5/src/main/res/values/themes.xml
+++ b/ch5/src/main/res/values/themes.xml
@@ -6,4 +6,9 @@
     </style>
 
     <style name="Theme.Likealionandroid" parent="Base.Theme.Likealionandroid" />
+
+    <style name="MyActivityTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <item name="colorPrimary">#FFFF0000</item>
+        <item name="colorSecondary">#FF0000FF</item>
+    </style>
 </resources>
